--- a/templates/login.html
+++ b/templates/login.html
@@ -7,7 +7,7 @@
     <title>Login - Finance Manager</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link href="./index.css" rel="stylesheet">
+    <link href="/static/index.css" rel="stylesheet">
 </head>
 
 <body>
